--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@clerk/backend": "^1.3.2",
     "@clerk/nextjs": "^5.2.4",
+    "@headlessui/react": "^2.1.2",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.9.4",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -29,6 +31,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.51.9",
     "@tanstack/react-table": "^8.19.3",
+    "@types/react-slick": "^0.23.13",
     "antd": "^5.19.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -36,6 +39,8 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
     "drizzle-zod": "^0.5.1",
+    "embla-carousel-autoplay": "^8.1.7",
+    "embla-carousel-react": "^8.1.7",
     "hono": "^4.5.0",
     "lucide-react": "^0.411.0",
     "next": "14.2.3",
@@ -47,8 +52,11 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
+    "react-spring": "^9.7.4",
     "react-use": "^17.5.0",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
