--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-table": "^8.19.3",
     "@types/react-slick": "^0.23.13",
     "antd": "^5.19.3",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
