--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@stripe/stripe-js": "^4.1.0",
     "@tanstack/react-query": "^5.51.9",
     "@tanstack/react-table": "^8.19.3",
     "@types/react-slick": "^0.23.13",
@@ -44,7 +45,7 @@
     "embla-carousel-react": "^8.1.7",
     "hono": "^4.5.0",
     "lucide-react": "^0.411.0",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "next-cloudinary": "^6.6.2",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -59,6 +60,7 @@
     "react-use": "^17.5.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
+    "stripe": "^16.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
