--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@stripe/stripe-js": "^4.1.0",
     "@tanstack/react-query": "^5.51.9",
@@ -48,16 +50,20 @@
     "next": "^14.2.5",
     "next-cloudinary": "^6.6.2",
     "next-themes": "^0.3.0",
+    "query-string": "^9.1.0",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.8.0",
-    "react-day-picker": "^9.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "react-spring": "^9.7.4",
     "react-use": "^17.5.0",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "stripe": "^16.5.0",
